Fix issue where viewport is expanded on iOS. CC #adamschwartz
Closes #71
- It seems that the magic spell is `max-width 100vw` for `width 100%` containers that can grow.

--- a/app/components/application/application.styl
+++ b/app/components/application/application.styl
@@ -49,6 +49,7 @@
     flex 0 0 auto
     justify-content space-between
     width 100%
+    max-width 100vw
     z-index 1
 
     > *
