--- a/app/components/target-wrapper/target-wrapper.styl
+++ b/app/components/target-wrapper/target-wrapper.styl
@@ -35,6 +35,7 @@
     border-radius roundedChildRadius
     font-size .8em
     margin-bottom 1em
+    max-width 100vw
     position relative
 
     button.run
