--- a/app/iframe.styl
+++ b/app/iframe.styl
@@ -7,7 +7,6 @@ html
   background transparent
 
 main
-  width 100%
   height 100%
   overflow hidden
 
