--- a/app/shared.styl
+++ b/app/shared.styl
@@ -8,7 +8,6 @@
 @import "styl/loading-dots"
 
 html, body
-  width 100%
   height 100%
 
 body
